--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@aws-sdk/client-s3": "^3.826.0",
     "await-to-js": "^3.0.0",
     "bcryptjs": "^3.0.2",
-    "compression": "^1.8.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-winston": "^4.2.0",
-    "multer": "^2.0.1",
+    "fs": "^0.0.1-security",
+    "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "nodemailer": "^7.0.3",
     "parse-error": "^0.2.0",
+    "path": "^0.12.7",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "serve-index": "^1.9.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
