--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-winston": "^4.2.0",
     "fs": "^0.0.1-security",
+    "ipfs-http-client": "^60.0.1",
     "multer": "^2.0.2",
     "multer-s3": "^3.0.1",
     "nodemailer": "^7.0.3",
