--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.826.0",
+    "@sendgrid/mail": "^8.1.6",
     "await-to-js": "^3.0.0",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
